# retail-demand-intelligence

./: .cursorrules  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  run_full_pipeline.py
.github/workflows/: ci.yml  deploy_space.yml
app/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
app/src/: App.tsx  index.css  main.tsx  router.tsx
configs/: dashboard.yaml  data.yaml  evaluation.yaml  features.yaml  inventory.yaml  monitoring.yaml  reconciliation.yaml  training.yaml
contracts/: forecast_output.yaml  serving_assets.yaml  silver_sales.yaml
docs/: 01_business_case.md  02_data_architecture.md  03_ml_system_design.md  04_inventory_engine.md  05_demand_classification.md  06_reconciliation.md  08_synthetic_data_disclaimer.md  09_deployment_guide.md  10_monitoring_runbook.md  11_decision_log.md  12_known_issues.md  CONTEXT.md  MASTER_SPEC_v3.md  SESSION_SNAPSHOT.md
docs/07_model_cards/: croston_tsb.md  lgbm_global.md  seasonal_naive.md
sql/marts/: mart_demand.sql  mart_executive.sql  mart_forecast.sql  mart_inventory.sql
sql/staging/: stg_calendar.sql  stg_prices.sql  stg_sales.sql
src/classification/: __init__.py  abc_xyz.py  demand_classifier.py  scd_manager.py
src/evaluation/: __init__.py  backtesting.py  metrics.py  segmented_report.py  shap_analysis.py
src/export/: __init__.py  serving_exporter.py
src/features/: __init__.py  calendar_features.py  feature_store.py  interaction_features.py  intermittency_features.py  lag_features.py  leakage_guard.py  price_features.py  (+2 more)
tests/: conftest.py
(+92 files in other folders)
